<?xml version="1.0"?>
<package format="2">
    <name>rcf_chassis_controllers</name>
    <version>0.0.0</version>
    <description>The rcf_chassis_controllers package</description>

    <maintainer email="liao@todo.todo">liao</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <depend>rcf_common</depend>
    <depend>rcf_msgs</depend>

    <depend>pluginlib</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>forward_command_controller</depend>
    <depend>realtime_tools</depend>
    <depend>control_toolbox</depend>
    <depend>effort_controllers</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>angles</depend>

    <export>
        <controller_interface plugin="${prefix}/rcf_chassis_controllers_plugins.xml"/>
    </export>
</package>
